Fix alignment issue on diff blocks

--- a/src/_includes/components/code-more.css
+++ b/src/_includes/components/code-more.css
@@ -35,6 +35,7 @@
 
 pre[class*="language-diff-"] {
 	padding-left: 1.5rem;
+	padding-right: 0;
 }
 .token.deleted {
 	background-color: hsl(350deg 100% 88% / 20%);
